Upgrade Android Gradle plugin to 8.2.2
Upgrade compileSdk version to 34
Update build and dependencies to be compatible with Java 17