@@ -73,17 +73,19 @@ dependencies {
 
     // Dependencies used for unit tests.
     testImplementation 'junit:junit:4.13'
-    testImplementation('org.robolectric:robolectric:4.3.1') {
+    testImplementation('org.robolectric:robolectric:4.7.3') {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
+    testImplementation 'commons-io:commons-io:2.16.1'
     testImplementation 'org.robolectric:shadows-play-services:3.3.2'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
     testImplementation 'org.powermock:powermock-module-junit4-rule:1.6.5'
     testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
     testImplementation 'org.powermock:powermock-classloading-xstream:1.6.5'
-    testImplementation 'org.bouncycastle:bcmail-jdk15on:1.65'
+    testImplementation 'org.powermock:powermock-classloading-xstream:1.6.5'
+    testImplementation 'org.bouncycastle:bcmail-jdk18on:1.71.1'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -105,4 +107,25 @@ configurations {
 }
 artifacts {
     unitTestArtifact jarTests
+}
+
+tasks.withType(Test) {
+    jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.net=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.text=ALL-UNNAMED',
+            '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
+            '--add-opens=java.base/java.security=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/sun.security.jca=ALL-UNNAMED',
+            '--add-opens=java.base/sun.security.util=ALL-UNNAMED',
+            '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED',
+            '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.regex=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.zip=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio.charset=ALL-UNNAMED'
+
 }
